tests/errors/item-macro-planned.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(fn generated() -> i64 { return 1 });

fn main() -> i64 {
  return 0;
}
